# voice-finder

./: .gitignore  README.md  RUNS_NOTES  pyproject.toml  report.md
notebooks/: create_dataset.ipynb  create_dataset_voxceleb2.ipynb  evaluate.ipynb  preprocessing_common_voice.ipynb  train_model.ipynb  train_model_1.ipynb  voxceleb_langauge_classification.ipynb
src/voice_finder/: __init__.py  dataset.py  eval.py  example_inference.py  inference.py  inference_utils.py  model.py  preprocessor.py
